# rust-test-optimization-api

./: .gitignore  Cargo.toml  build.rs
include/: libcivisibility.h
src/: bindings.rs  cgo.c  cgo.rs  lib.rs  libcivisibility_bindings.rs  main.rs  test_optimization.rs  tests.rs
