[package]
name = "temp-test-optimization-rust-api"
version = "0.2.0"
edition = "2021"
description = "This is a test for a test optimization rust api to upload test optimization data"
license = "Apache-2.0"

[dependencies]
rustc_version_runtime = "0.3.0"

[build-dependencies]
reqwest = { version =  "0.12.9", features = ["blocking"] }
sevenz-rust = "0.6.1"

[target.'cfg(windows)'.build-dependencies]
cc = "1.2.3"

[build]
links = "libcivisibility"